# kyc-ai-knowledge-graph

./: .env.example  .gitignore  GRAPH_SCHEMA.md  MVP_IMPLEMENTATION.md  MVP_QUERIES.md  README.md  pyproject.toml  requirements.txt  schema.cypher  setup.py  test_mvp_simple.py
docs/: GRAPHRAG.md  GRAPHRAG_IMPLEMENTATION.md  GRAPHRAG_QUICKSTART.md
examples/: graphrag_example.py
src/: graphrag.py  ingest.py  rag.py  retrieval.py
src/data_loader/: __init__.py  config.py  downloader.py  main.py  normalization.py  persistence.py  processors.py
src/neo4j_module/: __init__.py  connector.py  loader.py  schema.py
tests/: test_graphrag.py
