[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kyc-ai-knowledge-graph"
version = "0.1.0"
description = "GLEIF data loader for KYC AI Knowledge Graph"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "AISmithy"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "beautifulsoup4>=4.11.0",
]

[project.scripts]
gleif-loader = "data_loader.main:main"

[tool.setuptools.packages.find]
where = ["src"]
